--- a/package.json
+++ b/package.json
@@ -40,21 +40,25 @@
     "@remix-run/react": "latest",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@sveltejs/kit": "latest",
+    "@sveltejs/kit": "^0.0.30",
     "@types/jsonwebtoken": "^9.0.10",
-    "@vercel/analytics": "latest",
+    "@vercel/analytics": "^1.3.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "compression": "^1.8.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "express-rate-limit": "^8.1.0",
+    "express-slow-down": "^3.0.0",
     "geist": "^1.3.1",
+    "helmet": "^8.1.0",
     "input-otp": "1.4.1",
     "isomorphic-dompurify": "^2.26.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.32",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-day-picker": "9.8.0",
